# sandhook-docs

./: .gitignore  README.md  build.gradle  key0_aliens_aliens  oatdump.txt
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: CMakeLists.txt  logging.h  native-lib.cpp  sandhook.cpp
app/src/main/cpp/art/: art_method.cpp
app/src/main/cpp/includes/: arch.h  hide_api.h
app/src/main/cpp/nativehook/: native_hook.cpp
app/src/main/cpp/utils/: hide_api.cpp
app/src/main/java/com/swift/sandhook/: HookPass.java  LogTags.java  MainActivity.java  MyApp.java  NativeHookTest.java  SandHook.java  SandHookConfig.java  SandHookMethodResolver.java
app/src/main/java/com/swift/sandhook/test/: InterImpl.java  PendingHookTest.java  TestClass.java
app/src/main/java/com/swift/sandhook/testHookers/: ActivityHooker.java  CtrHook.java  CustmizeHooker.java  JniHooker.java  LogHooker.java  NewAnnotationApiHooker.java  ObjectHooker.java
gradle/wrapper/: gradle-wrapper.properties
hookers/: build.gradle
hooklib/: build.gradle
hooklib/src/main/cpp/: sandhook.cpp
hooklib/src/main/cpp/art/: art_method.cpp
hooklib/src/main/cpp/casts/: cast_art_method.cpp
hooklib/src/main/cpp/includes/: arch.h  hide_api.h
hooklib/src/main/cpp/utils/: hide_api.cpp
hooklib/src/main/java/com/swift/sandhook/: PendingHookHandler.java  SandHook.java
nativehook/: build.gradle
nativehook/src/main/cpp/: sandhook_native.cpp  sandhook_native.h
nativehook/src/main/cpp/archs/arm/arm32/hook/: hook_arm32.cpp
nativehook/src/main/cpp/archs/arm/arm32/inst/: inst_t32.h
nativehook/src/main/cpp/archs/arm/arm64/assembler/: assembler_arm64.cpp
nativehook/src/main/cpp/archs/arm/arm64/hook/: hook_arm64.cpp
nativehook/src/main/cpp/archs/arm/arm64/inst/: inst_arm64.cpp  inst_arm64.h  inst_struct_aarch64.h
nativehook/src/main/cpp/archs/arm/arm64/relocate/: code_relocate_arm64.cpp
nativehook/src/main/cpp/includes/: hook.h
xposedcompat/: build.gradle
xposedcompat/src/main/java/com/swift/sandhook/xposedcompat/hookstub/: HookStubManager.java
xposedcompat/src/main/java/com/swift/sandhook/xposedcompat/methodgen/: DynamicBridge.java  HookerDexMakerNew.java
xposedcompat_new/: build.gradle
